# guided-review-app

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  agent-skill.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-05-local-pr-selector.md
scripts/: bump-version.mjs  bump-version.test.mjs  local-release.mjs  local-release.test.mjs
src/: App.test.ts  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  agent-skill.md  tauri.conf.json
src-tauri/src/: acp_client.rs  agent_runner.rs  commands.rs  events.rs  fenced.rs  gh.rs  lib.rs  main.rs  projects.rs  repo.rs  review_persistence.rs  section.rs  telemetry.rs
src/components/: ChatPanel.empty-state.test.ts  ChatPanel.tsx  CommentDraftCard.tsx  DiffView.test.ts  DiffView.tsx  MarkdownViewer.tsx  ProjectPicker.tsx  ReviewLauncher.tsx  SectionList.tsx  SeverityBadge.tsx
src/lib/: acp.ts  agentPreference.test.ts  agentPreference.ts  chatScroll.test.ts  chatScroll.ts  commentPublish.test.ts  commentPublish.ts  diffFocus.test.ts  diffFocus.ts  diffSelection.test.ts  diffSelection.ts  diffStats.test.ts  diffStats.ts  ghCli.test.ts  ghCli.ts  markdownContent.test.ts  markdownContent.ts  projectSource.test.ts  projectSource.ts  publishedComments.test.ts  publishedComments.ts  reviewPersistence.test.ts  reviewPersistence.ts  reviewSectionPayload.test.ts  reviewSectionPayload.ts  sectionFeedback.test.ts  sectionFeedback.ts  sectionQueue.test.ts  sectionQueue.ts  sectionTelemetry.test.ts  store.test.ts  store.ts  telemetry.test.ts  telemetry.ts  unimportantRanges.test.ts  unimportantRanges.ts
(+14 files in other folders)
