[package]
name = "guided-review-app"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "guided_review_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "fs"] }
anyhow = "1"
thiserror = "2"
dirs = "5"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
agent-client-protocol = { version = "0.11", features = ["unstable_session_usage"] }
async-process = "2"
futures = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
shell-words = "1"
tokio-util = { version = "0.7", features = ["compat"] }
json5 = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "trace", "reqwest-blocking-client"] }
libsql = { version = "0.9.30", default-features = false, features = ["core"] }
